turtleart.star.Star.scala.error
Erreur de compilation :
Star:7: error: not found: value ag
  ag = 65
  ^Star:9: error: not found: value ag
  droite(ag)
         ^Star:11: error: not found: value ag
  gauche(2*ag)
           ^