turtleart.star.Star.scala.code
override def run() {
  var i=0
  for (i <- 0 to 4){V()}
}

def V(){
  ag = 65
  avance(50)
  droite(ag)
  avance(50)
  gauche(2*ag)
}